# autoresearch-robotics

./: .gitignore  README.md  program.md  setup_task.py
core/: program.md.template
templates/isaac/fetchreach/: evaluate.py  prepare.py  pyproject.toml
templates/mujoco/fetchpickplace/: program.md
templates/mujoco/fetchpush/: program.md
templates/mujoco/fetchreach/: program.md
